Fixed the pathing on mobile pic

--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -40,7 +40,7 @@ header {
 
 @media only screen and (max-width: 768px) {
   header {
-  background-image: url("../pics/LandingPicSmall.jpg");
+  background-image: url("../pics/landingPicSmall.jpg");
   max-width: 100%;
   height: 100vh;
   }
@@ -144,12 +144,12 @@ li a:hover {
   font-size: 16px;
   cursor: pointer;
   float: bottom;
-  
+
 }
 
 #AboutButton a:hover {
     border-color: #0066ff;
-    
+
 }
 
 
